test/files/neg/t3757/A.java
package a;

public abstract class A {
  abstract String foo(); // package protected!
}